--- a/templates/index.html
+++ b/templates/index.html
@@ -26,9 +26,12 @@
    <br>
    <br>
   <!-- to iterate over the list of dino names and print all-->
-     {% for output in predicted_name %}
+  {% for output in predicted_name %}
       <p>{{ output }} </p>
   {% endfor %}
+ <footer>
+     <p>Email : mhemendrakumar@gmail.com</p>
+ </footer>
  </div>
 
 
