--- a/static/css/style.css
+++ b/static/css/style.css
@@ -64,3 +64,10 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
   cursor: pointer;
 }
 .btn:hover { background-color: #0a0000; box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19); }
+
+Footer p {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    font-size: 14px;
+}
